correct_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acme-challenge-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: lesyk.d1ma-angel.com
    http:
      paths:
      - path: /.well-known/acme-challenge/(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: nginx-autoscale
            port:
              number: 80
