myingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lesyk.d1ma-angel.com
      secretName: app-tls
  rules:
    - host: lesyk.d1ma-angel.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: nginx-autoscale
                port:
                  number: 80
